--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -249,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(34799, 32, 32, 1)\n"
+      "Updated image shape:(32, 32, 1)\n"
      ]
     }
    ],
@@ -294,8 +294,8 @@
     "X_valid_gray = (X_valid_gray-128) / 128\n",
     "X_test_gray = (X_test_gray-128) / 128\n",
     "\n",
-    "# Note: check dimension \n",
-    "print(X_train_gray.shape)\n",
+    "# Note: check dimension\n",
+    "print(\"Updated image shape:{}\".format(X_train_gray[0].shape))\n",
     "\n",
     "#shuffling the datas\n",
     "X_train_gray, y_train = shuffle(X_train_gray, y_train)\n"
@@ -348,10 +348,8 @@
     "# output_size = [output_ht, output_wd, depth]\n",
     "# stride = [stride_batch, stride_height, stride_width, stride_features] ; ex: stride = [1, 2, 2, 1]\n",
     "\n",
-    "def Convolution(input_size, output_size, stride, P):\n",
-    "    mu = 0\n",
-    "    sigma = 0.1\n",
-    "    \n",
+    "def Convolution(mu, sigma, input_size, output_size, stride, P):\n",
+    "\n",
     "# #   Note calculating padding:\n",
     "#     if Padding=='VALID':\n",
     "#         P = 0\n",
@@ -360,27 +358,17 @@
     "    \n",
     "    filter_ht = input_size[0] + 2*P - (output_size[0] -1) * stride[1]\n",
     "    filter_wd = input_size[1] + 2*P - (output_size[1] -1) * stride[2]\n",
+    "    input_depth = input_size[2]\n",
+    "    output_depth = output_size[2]\n",
     "    \n",
     "    # first convolutional network with 5x5 filter with input depth 1 and output depth 6.\n",
-    "    conv_weight = tf.Variable(tf.truncated_normal(shape=(filter_ht, filter_wd, input_size[2], output_size[2]), mean = mu, stddev = sigma))\n",
+    "    conv_weight = tf.Variable(tf.truncated_normal(shape=(filter_ht, filter_wd, input_depth, output_depth), mean = mu, stddev = sigma))\n",
     "    \n",
     "    # Initialize the bias\n",
     "    conv_bias = tf.Variable(tf.zeros(output_depth))\n",
     "    \n",
-    "    # Convolve filter over images and add bias at the end.\n",
-    "    conv = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
-    "    \n",
-    "    return conv\n",
-    "\n",
-    "def Pooling()"
+    "    return conv_weight, conv_bias\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -391,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,41 +394,47 @@
     "    mu = 0\n",
     "    sigma = 0.1\n",
     "    \n",
-    "    # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
+    "    # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6, stride= [1,1,1,1]\n",
+    "    input_size = [32,32,1]  # height, width, depth\n",
+    "    output_size = [28,28,6] # height, width, depth\n",
+    "    stride = [1,1,1,1]\n",
+    "    P = 0\n",
+    "    conv_weight, conv_bias = Convolution(mu, sigma, input_size, output_size, stride, P)\n",
     "    # first convolutional network with 5x5 filter with input depth 1 and output depth 6. \n",
-    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma))\n",
-    "    conv1_b = tf.Variable(tf.zeros(6))\n",
-    "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
+    "    conv1   = tf.nn.conv2d(x, conv_weight, stride, padding='VALID') + conv_bias\n",
     "\n",
-    "    # Activation.\n",
-    "    # Activate the output of convolutional layer with Relu activation function \n",
+    "    # Activating the output of convolutional layer with Relu activation function \n",
     "    conv1 = tf.nn.relu(conv1)\n",
     "\n",
     "    # Pooling. Input = 28x28x6. Output = 14x14x6.\n",
     "    # Pool output with 2x2 kernel with 2x2 stride, gives 14x14x6 \n",
     "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
-    "    # SOLUTION: Layer 2: Convolutional. Output = 10x10x16.\n",
-    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
-    "    conv2_b = tf.Variable(tf.zeros(16))\n",
-    "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
+    "    # Layer 2: Convolutional. Input = 14x14x6 output = 10x10x16.\n",
+    "    input_size1 = [14,14,6]\n",
+    "    output_size1 = [10,10,16]\n",
+    "    stride = [1,1,1,1]\n",
+    "    P = 0\n",
+    "    conv_weight, conv_bias = Convolution(mu, sigma, input_size1, output_size1, stride, P)\n",
+    "    # second convolutional network with 10x10 filter with input depth 6 and output depth 16. \n",
+    "    conv2 = tf.nn.conv2d(x, conv_weight, stride, padding='VALID') + conv_bias\n",
     "    \n",
-    "    # SOLUTION: Activation.\n",
+    "    # Activation.\n",
     "    conv2 = tf.nn.relu(conv2)\n",
     "\n",
-    "    # SOLUTION: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    # Pooling. Input = 10x10x16. Output = 5x5x16.\n",
     "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
-    "    # SOLUTION: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    # Flatten. Input = 5x5x16. Output = 400.\n",
     "    # Flattening output into a vector. Lengthof this vector is 5x5x16 = 400\n",
     "    fc0   = flatten(conv2)\n",
     "    \n",
-    "    # SOLUTION: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    # Layer 3: Fully Connected. Input = 400. Output = 120.\n",
     "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
     "    fc1_b = tf.Variable(tf.zeros(120))\n",
     "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
     "    \n",
-    "    # SOLUTION: Activation.\n",
+    "    # Activation.\n",
     "    fc1    = tf.nn.relu(fc1)\n",
     "\n",
     "    # SOLUTION: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
@@ -451,11 +445,10 @@
     "    # SOLUTION: Activation.\n",
     "    fc2    = tf.nn.relu(fc2)\n",
     "\n",
-    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 43.\n",
     "    # Attach a fully connected output layer with width equal to number of classes in out output sets.\n",
-    "    # Here, we have 10 classes, 1 for each digits, so width of output layer is 10.\n",
-    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, 10), mean = mu, stddev = sigma))\n",
-    "    fc3_b  = tf.Variable(tf.zeros(10))\n",
+    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, 43), mean = mu, stddev = sigma))\n",
+    "    fc3_b  = tf.Variable(tf.zeros(43))\n",
     "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
     "    \n",
     "    return logits"
