--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -277,8 +277,8 @@
     "\n",
     "\n",
     "X_train_gray = np.mean(X_train, axis = 3, keepdims = True)\n",
-    "X_valid_gray = np.mean(X_valid, axis = 3, keepdims = True)\n",
     "X_test_gray = np.mean(X_valid, axis = 3 , keepdims = True)\n",
+    "X_valid_gray = np.mean(X_valid, axis = 3, keepdims = True)\n",
     "# works but depth reduced by 1\n",
     "# X_train_gray = X_train[:,:,:,0]*rgb_weights[0] + X_train[:,:,:,1]*rgb_weights[1] + X_train[:,:,:,2]*rgb_weights[2]  \n",
     "\n",
@@ -291,8 +291,8 @@
     "\n",
     "# Normalizing the images\n",
     "X_train_gray = (X_train_gray-128) / 128\n",
-    "X_valid_gray = (X_valid_gray-128) / 128\n",
     "X_test_gray = (X_test_gray-128) / 128\n",
+    "X_valid_gray = (X_valid_gray-128) / 128\n",
     "\n",
     "# Note: check dimension\n",
     "print(\"Updated image shape:{}\".format(X_train_gray[0].shape))\n",
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
     "    # Initialize the bias\n",
     "    conv_bias = tf.Variable(tf.zeros(output_depth))\n",
     "    \n",
-    "    return conv_weight, conv_bias\n"
+    "    return conv_weight, conv_bias"
    ]
   },
   {
@@ -379,13 +379,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Define your architecture here.\n",
     "### Feel free to use as many code cells as needed.\n",
-    "\n",
+    "import tensorflow as tf\n",
     "from tensorflow.contrib.layers import flatten\n",
     "\n",
     "# NOTE: This is the entire lenet architechture. Next section puts it to use.\n",
@@ -394,7 +394,7 @@
     "    mu = 0\n",
     "    sigma = 0.1\n",
     "    \n",
-    "    # Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6, stride= [1,1,1,1]\n",
+    "    # Layer 1: Convolution 1. Input = 32x32x1. Output = 28x28x6, stride= [1,1,1,1]\n",
     "    input_size = [32,32,1]  # height, width, depth\n",
     "    output_size = [28,28,6] # height, width, depth\n",
     "    stride = [1,1,1,1]\n",
@@ -410,8 +410,8 @@
     "    # Pool output with 2x2 kernel with 2x2 stride, gives 14x14x6 \n",
     "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
-    "    # Layer 2: Convolutional. Input = 14x14x6 output = 10x10x16.\n",
-    "    input_size1 = [14,14,6]\n",
+    "    # Layer 2: Convolution 2. Input = 14x14x6 output = 10x10x16.\n",
+    "    input_size1 = [14,14,6]code cells as needed.\n",
     "    output_size1 = [10,10,16]\n",
     "    stride = [1,1,1,1]\n",
     "    P = 0\n",
@@ -419,14 +419,14 @@
     "    # second convolutional network with 10x10 filter with input depth 6 and output depth 16. \n",
     "    conv2 = tf.nn.conv2d(x, conv_weight, stride, padding='VALID') + conv_bias\n",
     "    \n",
-    "    # Activation.\n",
+    "    # Activating the output of convolutional layer with Relu activation function \n",
     "    conv2 = tf.nn.relu(conv2)\n",
     "\n",
     "    # Pooling. Input = 10x10x16. Output = 5x5x16.\n",
     "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
     "\n",
     "    # Flatten. Input = 5x5x16. Output = 400.\n",
-    "    # Flattening output into a vector. Lengthof this vector is 5x5x16 = 400\n",
+    "    # Flattening output into a vector. Length of this vector is 5x5x16 = 400\n",
     "    fc0   = flatten(conv2)\n",
     "    \n",
     "    # Layer 3: Fully Connected. Input = 400. Output = 120.\n",
@@ -437,7 +437,7 @@
     "    # Activation.\n",
     "    fc1    = tf.nn.relu(fc1)\n",
     "\n",
-    "    # SOLUTION: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    # Layer 4: Fully Connected. Input = 120. Output = 84.\n",
     "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
     "    fc2_b  = tf.Variable(tf.zeros(84))\n",
     "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
@@ -445,7 +445,7 @@
     "    # SOLUTION: Activation.\n",
     "    fc2    = tf.nn.relu(fc2)\n",
     "\n",
-    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 43.\n",
+    "    # Layer 5: Fully Connected. Input = 84. Output = 43.\n",
     "    # Attach a fully connected output layer with width equal to number of classes in out output sets.\n",
     "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, 43), mean = mu, stddev = sigma))\n",
     "    fc3_b  = tf.Variable(tf.zeros(43))\n",
@@ -479,7 +479,27 @@
     "### Calculate and report the accuracy on the training and validation set.\n",
     "### Once a final model architecture is selected, \n",
     "### the accuracy on the test set should be calculated and reported as well.\n",
-    "### Feel free to use as many code cells as needed."
+    "### Feel free to use as many code cells as needed.\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "EPOCHS = 10  \n",
+    "BATCH_SIZE = 128\n",
+    "\n",
+    "x = tf.placeholder(tf.float32, (None, 32, 32, 1))\n",
+    "y = tf.placeholder(tf.int32, (None))\n",
+    "one_hot_y = tf.one_hot(y, 43)\n",
+    "\n",
+    "# Setting a training Pipeline\n",
+    "rate = 0.001\n",
+    "\n",
+    "# Pass input data to lenet fn to calculate the logits\n",
+    "logits = LeNet(x)\n",
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(labels=one_hot_y, logits=logits)\n",
+    "loss_operation = tf.reduce_mean(cross_entropy)\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate = rate)\n",
+    "training_operation = optimizer.minimize(loss_operation)\n",
+    "\n",
+    "# NEXT: PASSING DATA TO TRAINING PIPELINE TO WORK"
    ]
   },
   {
